# vision-browser

./: .coverage  .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.5-REQUIREMENTS.md  v0.6-REQUIREMENTS.md  v0.6-ROADMAP.md
.planning/phases/1.0-test-coverage-fastorchestrator-cli-inject/: 1.0-01-PLAN.md
.planning/phases/10-test-infrastructure-and-mocks/: 10-01-SUMMARY.md  10-02-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/vision_browser/: __init__.py  browser.py  circuit_breaker.py  cli.py  config.py  desktop.py  diff_screenshot.py  error_tracker.py  exceptions.py  fast_orchestrator.py  inject.js  locator_orchestrator.py  mcp_server.py  mcp_server_v2.py  multi_browser.py  orchestrator.py  playwright_browser.py  screenshot_manager.py  session.py  session_pool.py  vision.py  websocket_preview.py
tests/: conftest.py  test_circuit_breaker.py  test_cli_improvements.py  test_core.py  test_diff_and_circuit_breaker.py  test_diff_screenshot_integration.py  test_fast_orchestrator_and_cli.py  test_mcp_server_hardening.py  test_milestone2.py  test_model_json_compliance.py  test_playwright.py  test_session_and_diff.py  test_vision_and_desktop.py  test_vision_client_mocks.py
tests/mocks/: __init__.py  groq_responses.py  nim_responses.py
(+23 files in other folders)
