[project]
name = "vision-browser"
version = "0.1.0"
description = "Fast vision-driven browser automation using Groq Vision + agent-browser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.13.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
]

[project.scripts]
vision-browser = "vision_browser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_browser"]

[dependency-groups]
dev = ["ruff>=0.4.0", "pytest>=8.0.0"]
